# zkevm-prover

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile-BASE  Dockerfile-CUDA  Dockerfile-GHA  Dockerfile-GPU  Dockerfile-MOCK  Dockerfile-TEST  Dockerfile.okone  Makefile  README.md  RELEASEMAP.md  build-docker-on-mac-m1.sh  build-image.sh  build_output_4.txt  devnet.json  run-cpu.sh  run-gpu.sh
.github/workflows/: image-build.yml  prover_e2e.yml  push-docker.yaml
patches/: prof.patch
src/: main.cpp
src/config/: definitions.hpp  setup-13.txt  version.hpp
src/executor/: executor.cpp
src/ffiasm/: fec.cpp  fnec.cpp  fq.cpp  fr.cpp
src/hashdb/: database.cpp
src/main_sm/fork_10/scripts/: rom_10.json  rom_11.json
src/main_sm/fork_12/scripts/: rom_12.json
src/main_sm/fork_13/scripts/: metadata-rom_13.txt
src/prover/: prover.cpp  prover.hpp  prover_request.cpp
src/service/aggregator/: aggregator_client.cpp
src/service/statedb/: statedb.cpp  statedb_remote.cpp  statedb_service.cpp
src/starkpil/: chelpers.cpp  chelpers.hpp  chelpers_steps.hpp  chelpers_steps_avx512.hpp  chelpers_steps_gpu.cu  chelpers_steps_gpu.hpp  chelpers_steps_pack.cu  chelpers_steps_pack.cuh  chelpers_steps_pack.hpp  polinomial.hpp  stark_info.hpp  starks.cpp  starks.hpp  steps.hpp
src/starkpil/merkleTree/: merkleTreeGL.cpp  merkleTreeGL.hpp
src/starkpil/starkRecursiveF/: starkRecursiveF.cpp
src/statedb/: database.cpp
src/utils/: memory.cpp  memory.cu  memory.cuh  scalar.cpp  scalar.hpp  utils.cpp  utils.hpp  zklog.hpp
test/service/aggregator/: CMakeLists.txt  Dockerfile  aggregator_client_mock.cpp  aggregator_client_mock.hpp  aggregator_server.cpp  aggregator_server.hpp  aggregator_service.cpp  aggregator_service.hpp  test_aggregator_mock.cpp  utils.hpp
test/unit_test/: unit_test.cpp
testvectors/: config_runFile_BatchProof.json  config_runFile_e2e.json  pay-batch-10.json
testvectors/pay/: 20uop-0.json  20uop-0.rpc.json  20uop-1.json  20uop-1.rpc.json
tools/: copy_generate_files.sh  download_archive.sh
tools/sm/blake/: blake_test.cpp
tools/sm/sha256/: sha256_test.cpp
(+7 files in other folders)
